DON'T require Java 21!